refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -155,7 +155,7 @@
   row-gap: 3vw;
   justify-content: space-between;
   align-items: flex-end;
-  height:20vh;
+  height:16vh;
 }
 
 .siteShortcuts > .linkButton {
